# events

./: Dockerfile  README.md  docker-compose.yml  prod.env  pyproject.toml
docker/: docker-compose.yml
kafka-data/: meta.properties
src/: __app_configs.py
src/events/: consumer.py  producer.py
src/events/schemas/: user.avsc
src/routers/: health.py  user.py
src/server/: main.py
tests/: conftest.py
tests/routers/: test_health.py
